# mokstats

./: .gcloudignore  .gitignore  README.md  app.prod.yaml  app.yaml  lint.ps1  manage.py  populate.sql  pre-commit.sh  pyproject.toml  setup.py
.github/workflows/: deploy-to-prod.yml  deploy.yml  lint.yml
doc/: populate.sql  run2025
doc/old_linux_docs/: install
mokstats/: admin.py  ajax.py  config.py  models.py  rating.py  settings.py  settings_example.py  startup.py  tests.py  tests_nodb.py  urls.py  utils.py  views.py  wsgi.py
mokstats/management/commands/: clearcache.py
mokstats/migrations/: 0001_initial.py
mokstats/static/: admin_custom.js
mokstats/stats/: match_statser.py  player_result_statser.py  trumph_statser.py
mokstats/templates/: base.html  credits.html  footer.html  index.html  stats-result-list.html  stats.html
tests/: data_service.py  test_db_tests.py  test_match.py  test_rating.py
