[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
gunicorn = "*"
psycopg = { extras = ["binary", "pool"], version = "*" }
django = "==5.2.2"
#google-cloud-secret-manager = "*"

[tool.poetry.group.dev.dependencies]
vulture = "*"
isort = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
flake8-pytest-style = "*"
Flake8-pyproject = "*"
pep8-naming = "*"
mypy = "*"
pytest = "*"
pytest-django = "*"
#pytest-mock = "*"
django-stubs = "==5.2.0"

[tool.vulture]
min_confidence = 61

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
exclude = ["*/migrations/*"]
max-complexity = 10

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
strict_equality = true
warn_unused_configs = true

[tool.django-stubs]
django_settings_module = "mokstats.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mokstats.settings"
addopts = "--reuse-db"
markers = ["unittest"]
